  This means that dithered decoding is now included per default (TODO Thomas!).
  Please note that work is ongoing to improve the dithering quality, more to come...
- Buffer plays any audio type now.
- New output module: OpenAL
- Bug fixes:
  - broken frame fillup for non-signed 8 bit formats with correct zero (bug 2805665)
  - Crash on invalid UTF-16 in ID3 tags fixed (thanks to Andy Hefner)
- Buid system allows AltiVec on non-Macs now (don't enforce unsupported gcc flags).
- Terminal control mode is more verbose (gives hint about pressing 'h').

1.8.1
---
- Include improvements to integer decoder from SVN trunk.
  They have been accidentally promised on 1.8.0 release announcements, though they were not there. Here it is: ISO compliant fixed point decoding (speed optimizations are still reserved for next release).
- Fixed build with ./configure --enable-modules (bug in configure script).
- Fix name of binary in help screen when called with path.
- Build fix for old gcc with AltiVec code.
- Update of Sony PSP build files.

1.8.0 (The Taihei Monmament)
---

- New and improved SSE optimizations! For x86-64, too! Also AltiVec! Fast float output! Faster stereo!
  Finally, this should put mpg123 into the efficiency-leading position on current hardware!
  Thanks go out to Taihei Monma for pushing lots of new assembler code.
- Added proper rounding modes to 16bit integer.
  - Use ./configure --enable-int-quality to prefer accuracy over speed.
  - Accurate code (generic, SSE, 3dnow -- i586 has always been good) delivers ISO compliant quality with 16bit output.
  - Uses fast rounding for IEEE754 floats.
  - Mpg123 can do fully ISO compliant MPEG audio decoding to 16bits (of course to 32bit float/int, too).
- subtle performance enhancements via broader data alignment
- Prefer SSE code over 3DNowExt.
  - It can be tight, but generally our new SSE code is better on CPUs that can do both.
- Remove HF cutoff (SFB21), has been introduced in 0.59r .